--- a/angular.json
+++ b/angular.json
@@ -119,6 +119,10 @@
               "devServerTarget": "ng10-where-to-eat:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
